name:              getwebb
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Raphael Javaux
maintainer:        Raphael Javaux
synopsis:          The greatest Yesod web application ever.
description:       getwebb.org is a free sharing service to upload files.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://getwebb.org/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     JobsDaemon

                     Account
                     Account.Auth
                     Account.Register
                     Account.Avatar
                     Account.Foundation
                     Account.Settings
                     Account.Util

                     Handler.Comment
                     Handler.Download
                     Handler.History
                     Handler.Home
                     Handler.Upload
                     Handler.Upload.Archive
                     Handler.Upload.Compression
                     Handler.Upload.FFmpeg
                     Handler.Upload.Image
                     Handler.Upload.Media
                     Handler.Upload.Processing
                     Handler.Upload.Remove
                     Handler.View

                     Settings
                     Settings.StaticFiles
                     Settings.Development

                     Util.Date
                     Util.Extras
                     Util.Json
                     Util.Hmac
                     Util.Path
                     Util.Pretty

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2 -fllvm

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.1        && < 1.2
                 , yesod-core                    >= 1.1.2      && < 1.2
                 -- , yesod-auth                    >= 1.1        && < 1.2
                 , yesod-static                  >= 1.1        && < 1.2
                 , yesod-default                 >= 1.1.1      && < 1.2
                 , yesod-form                    >= 1.1.4      && < 1.3
                 , aeson                         >= 0.6
                 , array                         >= 0.4
                 , binary                        >= 0.5.1.1    && < 1.0
                 , blaze-markup                  >= 0.5        && < 1.0
                 , blaze-builder                 >= 0.3.1      && < 1.0
                 , bytestring                    >= 0.9        && < 0.11
                 , case-insensitive              >= 0.4.0.4
                 , clientsession                 >= 0.8        && < 1.0
                 , conduit                       >= 1.0
                 , containers                    >= 0.5        && < 1
                 , data-default
                 , deepseq                       >= 1.3
                 , digits                        >= 0.2
                 , directory                     >= 1.1        && < 1.3
                 , exif                          >= 3000
                 , either                        >= 3.0.2
                 , face-recognition              == 0.0.0
                 , fast-logger                   >= 0.3.1
                 , filepath                      >= 1.3        && < 2
                 , hamlet                        >= 1.1        && < 2
                 , hjsmin                        >= 0.1        && < 0.2
                 , http-conduit                  >= 1.9        && < 2.0
                 , http-types                    >= 0.7.3.0.1
                 , liblastfm                     >= 0.0.3.8
                 , mime-types                    >= 0.1.0.3
                 , monad-control                 >= 0.3        && < 0.4
                 , monad-logger                  >= 0.3.1
                 , mtl                           >= 2.1        && < 3
                 , network                       >= 2.3.1      && < 2.5
                 , old-locale                    >= 1.0.0.5
                 , persistent                    >= 1.0        && < 2.0
                 , persistent-sqlite             >= 1.0        && < 2.0
                 , persistent-template           >= 1.1.1
                 , process                       >= 1.1        && < 2.0
                 , random                        >= 1.0
                 , regex-posix                   >= 0.95       && < 1.0
                 , repa-devil                    >= 0.3.2.2    && < 1.0
                 , resourcet                     >= 0.4
                 , SHA                           >= 1.5        && < 2
                 , shakespeare-css               >= 1.0        && < 2
                 , shakespeare-js                >= 1.0        && < 2
                 , shakespeare-text              >= 1.0        && < 2
                 , taglib                        >= 0.1
                 , template-haskell
                 , text                          >= 0.11       && < 1
                 , time                          >= 1.4        && < 2
                 , timeit                        >= 1.0
                 , transformers                  >= 0.3        && < 1
                 , unix                          >= 2.6
                 , unordered-containers          >= 0.2.1
                 , vector                        >= 0.9.1
                 , wai                           >= 1.3        && < 1.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , warp                          >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , zlib                          >= 0.5.3
                 , zip-archive                   >= 0.1.2      && < 0.2

executable         getwebb
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , getwebb
                     , yesod-default
                     , warp                          >= 1.3        && < 1.4

    ghc-options:       -threaded -O2 -fllvm -rtsopts
